Add rybakit/twig-deferred-extension to composer.json

--- a/src/Resources/config/services_templating.yml
+++ b/src/Resources/config/services_templating.yml
@@ -7,3 +7,8 @@ services:
     CustomerManagementFrameworkBundle\Twig\Extension\CmfUrlUtilsExtension:
         autowire: true
         tags: [ 'twig.extension' ]
+
+    # the deferred extension is needed for placeholder helpers to work
+    # as otherwise the placeholder block would be rendered before any
+    # content was added (e.g. headTitle)
+    Twig\DeferredExtension\DeferredExtension: ~
