--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "pimcore/pimcore": "^11.0",
     "pimcore/search-query-parser": "^1.3",
     "pimcore/personalization-bundle": "^1.0",
+    "rybakit/twig-deferred-extension": "^3.0",
     "symfony/asset": "^6.2",
     "symfony/config": "^6.2",
     "symfony/console": "^6.2",
@@ -51,6 +52,9 @@
     "php-http/guzzle7-adapter": "^0.1.1",
     "phpstan/phpstan": "^1.9",
     "phpstan/phpstan-symfony": "^1.2.14"
+  },
+  "conflict": {
+    "twig/twig": "^3.9.0"
   },
   "suggest": {
     "php-http/httplug-bundle": "^1.20.0",
