--- a/.github/workflows/php-cs-fixer.yaml
+++ b/.github/workflows/php-cs-fixer.yaml
@@ -1,7 +1,7 @@
 name: "PHP-CS-Fixer"
 
 on:
-    pull_request:
+    pull_request_target:
         branches:
             - "[0-9]+.[0-9]+"
             - "[0-9]+.x"
@@ -30,6 +30,6 @@ jobs:
             - name: PHP-CS-Fixer
               uses: docker://oskarstark/php-cs-fixer-ga:latest
 
-            - uses: stefanzweifel/git-auto-commit-action@v4
+            - uses: stefanzweifel/git-auto-commit-action@v5
               with:
                   commit_message: Apply php-cs-fixer changes
