--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "require": {
-    "php": "~8.1.0 || ~8.2.0",
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
     "openspout/openspout": "^4.0",
     "doctrine/dbal": "^3.4.2",
     "doctrine/migrations": "^3.0.2",
