--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "require": {
-    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
     "doctrine/dbal": "^3.4.2",
     "doctrine/migrations": "^3.0.2",
     "dragonmantank/cron-expression": "^3.0.2",
@@ -24,9 +24,9 @@
     "pear/archive_tar": "^1.4.14",
     "pimcore/newsletter-bundle": "^1.0",
     "pimcore/number-sequence-generator": "^2.0",
-    "pimcore/admin-ui-classic-bundle": "^1.0",
+    "pimcore/admin-ui-classic-bundle": "^1.0 || ^2.0",
     "pimcore/object-merger": "^4.0",
-    "pimcore/pimcore": "^11.2",
+    "pimcore/pimcore": "^11.2 || 12.x-dev",
     "pimcore/search-query-parser": "^1.3",
     "pimcore/personalization-bundle": "^1.0",
     "symfony/asset": "^6.2",
@@ -48,7 +48,7 @@
     "codeception/module-symfony": "^3.1.0",
     "codeception/phpunit-wrapper": "^9",
     "php-http/guzzle7-adapter": "^0.1.1",
-    "phpstan/phpstan": "^1.9",
+    "phpstan/phpstan": "^1.12.15",
     "phpstan/phpstan-symfony": "^1.2.14",
     "phpunit/phpunit": "^9.5"
   },
