--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
       "ocramius/package-versions": true
     }
   },
+  "prefer-stable": true,
+  "minimum-stability": "dev",
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
     "doctrine/dbal": "^3.4.2",
