--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "drewm/mailchimp-api": "^2.2",
     "guzzlehttp/guzzle": "^7.2",
     "knplabs/knp-components": "^4.0",
+    "nesbot/carbon": "^3.8.4",
     "openspout/openspout": "^4.0",
     "pear/archive_tar": "^1.4.14",
     "pimcore/newsletter-bundle": "^1.0",
